--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -3,6 +3,7 @@ body {
   background-size: cover;
   background-repeat: no-repeat;
   margin: 0;
+  min-height: 100vh;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
